--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Chatgptutilities</title>
+  <title>ChatGPT Utilities</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tylertech/forge@2.0.0/dist/forge.css">
+  <link rel="stylesheet" href="https://cdn.forge.tylertech.com/v1/css/tyler-font.css">
 </head>
-<body>
+<body class="forge-typography">
   <app-root></app-root>
 </body>
 </html>
